Melhora acessibilidade completa para leitores de tela

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Definição de Programação Orientada à Gambiarra">
                     <h2>O que é POG?</h2>
                     <p class="lead color4-darker">Paradigma de desenvolvimento de software no qual se utiliza um improviso planejado temporário permanente na resolução de um problema.</p>
                     <p>Tende a gerar mais problemas do que resolve.</p>
@@ -144,7 +144,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Histórico e origem da POG">
                     <h2>Histórico da POG</h2>
                     <div class="row tight-spacing">
                         <div class="col-md-6">
@@ -167,7 +167,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Requisitos e cenários que levam ao uso de POG - parte 1">
                     <h2>Requisitos para se usar POG</h2>
                     <ul class="color4-darker">
                         <li>Product Owner que muda requisitos no meio da sprint</li>
@@ -182,7 +182,7 @@
                     </blockquote>
                 </section>
 
-                 <section>
+                 <section aria-label="Requisitos e cenários que levam ao uso de POG - parte 2">
                     <h2>Requisitos para se usar POG</h2>
                     <ul class="color4-darker">
                         <li>Daily de 2 horas!</li>
@@ -197,7 +197,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Princípios da POG - parte 1">
                     <h2>Princípios da POG</h2>
                     <dl>
                         <dt class="color4-darker">Enjambração Criativística</dt>
@@ -215,7 +215,7 @@
                     </blockquote>
                 </section>
 
-                 <section>
+                 <section aria-label="Princípios da POG - parte 2">
                     <h2>Princípios da POG</h2>
                     <dl>
                         <dt class="color4-darker">Insistimento Determinante</dt>
@@ -233,7 +233,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Princípios da POG - parte 3">
                     <h2>Princípios da POG</h2>
                     <dl>
                         <dt class="color4-darker">Proatividade Egocêntrica</dt>
@@ -251,7 +251,7 @@
                     </blockquote>
                 </section>
 
-                 <section>
+                 <section aria-label="Princípios da POG - parte 4">
                     <h2>Princípios da POG</h2>
                     <dl>
                         <dt class="color4-darker">Documentação Espartana</dt>
@@ -269,7 +269,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Princípios da POG - parte 5">
                     <h2>Princípios</h2>
                     <dl>
                         <dt class="color4-darker">Abstração Ignorancial</dt>
@@ -287,13 +287,13 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Introdução às técnicas de POG">
                     <h1>Técnicas de POG</h1>
                     <h2 class="color4-darker">The ninja POG!</h2>
                     <img class="img-center" src="img/ninja.png" alt="Ilustração de um ninja representando as técnicas secretas de programação orientada à gambiarra">
                 </section>
 
-                <section>
+                <section aria-label="Técnica Zipomatic Versioning - controle de versão por arquivos ZIP">
                     <h2>Zipomatic Versioning</h2>
                    <div class="row">
                        <div class="col-md-6  color4-darker">
@@ -321,7 +321,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Técnica Incremental Patching Debug - debugging por tentativa e erro">
                     <h2>Incremental Patching Debug</h2>
                     <div class="row">
                         <div class="col-md-6 color4-darker">
@@ -348,7 +348,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Técnica My Precious - proteção excessiva do próprio código">
                     <h2>My Precious</h2>
                     <div class="row">
                         <div class="col-md-6 color4-darker">
@@ -377,7 +377,7 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Técnica AI-Driven Development - dependência excessiva de IA">
                     <h2>AI-Driven Development</h2>
                     <div class="row">
                         <div class="col-md-6 color4-darker">
@@ -408,13 +408,13 @@
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Introdução aos Gambi Design Patterns">
                     <h1>Gambi Design Patterns</h1>
                     <h2 class="color4-darker">May the POG be with you!</h2>
                     <img src="img/JediTux.png" alt="Tux, o pinguim mascote do Linux, vestido como um Jedi segurando um sabre de luz, representando os padrões de design gambiarra" class="img-center">
                 </section>
 
-                <section>
+                <section aria-label="Padrão WTF - código incompreensível que funciona">
                     <h2>WTF / WTH / QPE</h2>
                     <ul class="color4-darker">
                         <li>Sabe aquele código que você sabe que funciona, mas que, pra você, parece magia negra?</li>
@@ -434,7 +434,7 @@ eval(localStorage.getItem('config'));
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão RCP - Reuse by Copy-and-Paste">
                     <h2>RCP Pattern ( Reuse by Copy-and-Paste )</h2>
                     <ul class="color4-darker">
                         <li>Copie o máximo de código que puder: Princípio da Reflexão Reprodutória</li>
@@ -447,7 +447,7 @@ eval(localStorage.getItem('config'));
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Hardcoded Data - dados sensíveis no código">
                     <h2>Hardcoded data</h2>
                     <ul class="color4-darker">
                         <li>Um dos padrões mais usados na indústria</li>
@@ -456,7 +456,7 @@ eval(localStorage.getItem('config'));
                         <li>Commit da API key no GitHub público</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código com dados sensíveis expostos"><code data-trim>
 const API_KEY = "pk_live_51HxJ8LGaSKqP9C8v2nR4mF";
 const DB_PASSWORD = "admin123";
 fetch(`https://api.stripe.com`, { headers: { Authorization: API_KEY }});
@@ -468,19 +468,19 @@ fetch(`https://api.stripe.com`, { headers: { Authorization: API_KEY }});
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Aviso de perigo - POG is coming">
                     <h1>ATENÇÃO</h1>
                     <img src="img/winter.png" alt="Paródia de Game of Thrones - POG is coming - A Programação Orientada à Gambiarra está chegando" class="img-center img-70" role="img">
                 </section>
 
-                <section>
+                <section aria-label="Padrão FORCEPS - forçar valores quando variáveis são nulas">
                     <h2>FORCEPS</h2>
                     <ul class="color4-darker">
                         <li>Por algum motivo nefasto, uma variável não recebe o valor que deveria ter. O que fazer?</li>
                         <li>Vai deixar esse pedaço de sucata pré-positrônica comandar sua vida?</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código forçando valor padrão quando variável é nula"><code data-trim>
 function processar(dados) {
     let usuario = dados.usuario;
 
@@ -497,7 +497,7 @@ function processar(dados) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Ostrich Syndrome - ignorar avisos e warnings">
                     <h2>Ostrich Syndrome Skill</h2>
                     <ul class="color4-darker">
                         <li>O que os olhos não veem, o coração não sente</li>
@@ -512,7 +512,7 @@ function processar(dados) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Nonsense Naming - nomes de variáveis sem sentido">
                     <h2>Nonsense Flag/Nonsense Naming</h2>
                     <ul class="color4-darker">
                         <li>Pra que quebrar a cabeça para usar nomes óbvios? Isso é uma falha de segurança!</li>
@@ -521,7 +521,7 @@ function processar(dados) {
                         <li>Nomes perfeitamente aceitáveis como identificadores</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplos de nomes ruins de variáveis"><code data-trim>
 teste1, temp2, a, b, x
 jaTrocouDeAba, botaoClicado, foiAtualizado, passouPorAqui
 numeroMagico, naoAchou, temErro
@@ -533,7 +533,7 @@ anterior5, atual5, anteriorDoAnterior5
                     </blockquote>
                 </section>
 
-                 <section>
+                 <section aria-label="Padrão Commented Code - comentar código problemático ao invés de corrigir">
                     <h2>Commented Code Implementation / Comments Forever</h2>
                     <ul class="color4-darker">
                         <li>O programa está dando problema?</li>
@@ -547,12 +547,12 @@ anterior5, atual5, anteriorDoAnterior5
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Reinvented Square Wheel - reinventar funcionalidades básicas da linguagem">
                     <h2>Reinvented Square Wheel Helper</h2>
                     <ul class="color4-darker">
                         <li>Se não lembra de como usar um recurso da linguagem, faça você mesmo!</li>
                     </ul>
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código com sequência gigante de if-else para converter string em número"><code data-trim>
 if (number.equals("1")) {
     return 1;
 } else if (number.equals("2")) {
@@ -575,7 +575,7 @@ if (number.equals("1")) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão You Shall Not Pass - capturar e bloquear todas as exceções">
                     <h2>You Shall Not Pass</h2>
                     <ul class="color4-darker">
                         <li>Capture e trate TODO tipo de problema que ocorrer</li>
@@ -587,13 +587,13 @@ if (number.equals("1")) {
                     </blockquote>
                 </section>
 
-                 <section>
+                 <section aria-label="Padrão Perfectness Execution - sempre retornar sucesso mesmo com erros">
                     <h2>Perfectness Execution / BulletProof</h2>
                     <ul class="color4-darker">
                         <li>Garanta que qualquer operação complexa sempre execute com sucesso!</li>
                         <li>O sistema não deve apresentar erros</li>
                     </ul>
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código que sempre retorna sucesso, mesmo quando ocorrem erros"><code data-trim>
 @Transactional
 public ResponseEntity<String> processar(Request req) {
     try {
@@ -612,13 +612,13 @@ public ResponseEntity<String> processar(Request req) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Exception Success - usar exceções para controle de fluxo">
                     <h2>Exception Success</h2>
                     <ul class="color4-darker">
                         <li>Use exceções para o controle de fluxo do POGrama!</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código usando exceções para controle de fluxo normal"><code data-trim>
 @GetMapping("/validar")
 public void validarUsuario(@RequestParam String id) {
     Usuario usuario = repository.findById(id).orElse(null);
@@ -629,7 +629,7 @@ public void validarUsuario(@RequestParam String id) {
 }
                     </code></pre>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Handler global que trata exceções de sucesso"><code data-trim>
 @ControllerAdvice
 public class GlobalExceptionHandler {
     @ExceptionHandler(SucessoException.class)
@@ -644,14 +644,14 @@ public class GlobalExceptionHandler {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão String Sushiman - parsing manual de strings ao invés de JSON">
                     <h2>String Sushiman</h2>
                     <ul class="color4-darker">
                         <li>Ao invés de criar DTOs, passe uma ou poucas strings!</li>
                         <li>Crie quantas regras forem necessárias sobre essas strings!</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código fazendo parsing manual de string ao invés de usar JSON"><code data-trim>
 @PostMapping("/processar")
 public ResponseEntity processar(@RequestBody String dados) {
     String[] partes = dados.split(";");
@@ -668,13 +668,13 @@ public ResponseEntity processar(@RequestBody String dados) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Sleeper - adicionar delays artificiais">
                     <h2>Sleeper / Human Factor</h2>
                     <ul class="color4-darker">
                         <li>Se a ação é rápida demais para o usuário perceber, coloque um atraso!</li>
                     </ul>
 
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código adicionando delay artificial para parecer que está processando"><code data-trim>
 async function salvarDados(dados) {
     // Adiciona delay para "parecer profissional"
     await new Promise(resolve => setTimeout(resolve, 3000));
@@ -693,7 +693,7 @@ function mostrarLoading() {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Black Cat - usar Map genérico ao invés de parâmetros tipados">
                     <h2>Black Cat in a Dark Room</h2>
                     <ul class="color4-darker">
                         <li>Precisa usar vários parâmetros para um método?</li>
@@ -708,7 +708,7 @@ function mostrarLoading() {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Mega Zord - método gigante que faz tudo">
                     <h2>Mega Zord</h2>
                     <ul class="color4-darker">
                         <li>Criar vários métodos torna o programa mais lento</li>
@@ -723,7 +723,7 @@ function mostrarLoading() {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Thunder Mega Zord - introdução">
                     <h2>Thunder Mega Zord</h2>
                     <ul class="color4-darker">
                         <li>A fusão entre um Megazord e um Gato preto em Quarto Escuro cria um Thunder Megazord</li>
@@ -735,9 +735,9 @@ function mostrarLoading() {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Thunder Mega Zord - exemplo de código">
                     <h2>Thunder Mega Zord</h2>
-                    <pre><code data-trim>
+                    <pre role="region" aria-label="Exemplo de código ignorando todos os erros e sempre retornando null"><code data-trim>
 async function processar(parametros) {
     try {
         let resultado = await fazerAlgo(parametros);
@@ -756,7 +756,7 @@ async function processar(parametros) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão Controller Confusion - colocar toda lógica no controller">
                     <h2>Controller Confusion</h2>
                     <ul class="color4-darker">
                         <li>Service layer? Pra quê?</li>
@@ -771,7 +771,7 @@ async function processar(parametros) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão No More Layers - tudo dentro de um único componente">
                     <h2>No More Layers</h2>
 
                     <ul class="color4-darker">
@@ -788,7 +788,7 @@ async function processar(parametros) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Padrão MongoDB is Web Scale - uso inadequado de NoSQL">
                     <h2>MongoDB is Web Scale</h2>
                     <ul class="color4-darker">
                         <li>Também conhecido como NoSQL solves everything</li>
@@ -809,7 +809,7 @@ async function processar(parametros) {
                     </blockquote>
                 </section>
 
-                <section>
+                <section aria-label="Conclusões finais sobre POG">
                     <h2>Conclusões Opinativas Completamente Irrelevantes</h2>
                     <ul class="color4-darker">
                         <li>POG é uma arte dominada por poucos</li>
@@ -849,7 +849,7 @@ async function processar(parametros) {
                     </nav>
                 </section>
 
-                <section>
+                <section aria-label="Slide final de despedida">
                     <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
                     <img src="img/pogramador.png" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center">
                 </section>
