Adiciona navegação clicável ao índice e corrige títulos das seções

--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
                     <h2>O que você vai aprender</h2>
                     <nav aria-label="Índice da apresentação">
                         <ol class="color4-darker">
-                            <li>O que é POG</li>
-                            <li>Histórico</li>
-                            <li>Requisitos</li>
-                            <li>Princípios</li>
-                            <li>Técnicas</li>
-                            <li>Gambi Design Patterns</li>
+                            <li><a href="#/2">O que é POG?</a></li>
+                            <li><a href="#/3">Histórico da POG</a></li>
+                            <li><a href="#/4">Requisitos para se usar POG</a></li>
+                            <li><a href="#/6">Princípios da POG</a></li>
+                            <li><a href="#/11">Técnicas de POG</a></li>
+                            <li><a href="#/16">Gambi Design Patterns</a></li>
+                            <li><a href="#/37">Conclusões</a></li>
                         </ol>
                     </nav>
 
