--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <ul class="color4-darker">
                                 <li>Cliente pedindo "só mais uma coisinha" antes do deploy</li>
                                 <li>Processo Ágil com 15 reuniões por semana!</li>
-                                <li>Deadline impossível e Wi-Fi instável</li>
+                                <li>Deadline impossível e VPN instável</li>
                                 <li>Equipe trabalhando 100% remoto sem sincronização</li>
                                 <li>Aproximação da demo para stakeholders</li>
                             </ul>
