Converte imagens estáticas para WebP mantendo GIFs animados
- Remove imagens estáticas antigas (PNG, JPG)
- Adiciona versões WebP otimizadas (qualidade 95%)
- Mantém GIFs animados no formato original
- Atualiza index.html para usar imagens WebP
- Redução média de 80% no tamanho das imagens estáticas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link rel="icon" type="image/x-icon" href="./img/logo.png">
+        <link rel="icon" type="image/webp" href="./img/logo.webp">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/reveal.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/theme/solarized.css" id="theme">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/lib/css/zenburn.css">
@@ -159,7 +159,7 @@
                     <h2>Histórico da POG</h2>
                     <div class="row tight-spacing">
                         <div class="col-md-6">
-                            <img src="img/Gregory_XIII.jpg" class="img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
+                            <img src="img/Gregory_XIII.webp" class="img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
                         </div>
                         <div class="col-md-6 color4-darker">
                             <p class="lead">A primeira POG registrada na história</p>
@@ -281,7 +281,7 @@
                 <section aria-label="Introdução às técnicas de POG">
                     <h1>Técnicas de POG</h1>
                     <h2 class="color4-darker">Habilidades Avançadas de Sobrevivência!</h2>
-                    <img class="img-center" src="img/sneak100.png" alt="Meme Sneak 100 - representando as técnicas furtivas de programação orientada à gambiarra">
+                    <img class="img-center" src="img/sneak100.webp" alt="Meme Sneak 100 - representando as técnicas furtivas de programação orientada à gambiarra">
                 </section>
 
                 <section aria-label="Técnica Zipomatic Versioning - controle de versão por arquivos ZIP">
@@ -399,7 +399,7 @@
                 <section aria-label="Introdução aos Gambi Design Patterns">
                     <h1>Gambi Design Patterns</h1>
                     <h2 class="color4-darker">Padrões Testados e Comprovados em Produção!</h2>
-                    <img src="img/this-is-fine.png" alt="Meme 'This is fine' - cachorro na sala pegando fogo representando os padrões de design gambiarra" class="img-center">
+                    <img src="img/this-is-fine.webp" alt="Meme 'This is fine' - cachorro na sala pegando fogo representando os padrões de design gambiarra" class="img-center">
                 </section>
 
                 <section aria-label="Padrão Magic Code - código incompreensível mas eficiente">
@@ -423,7 +423,7 @@ inicio
 fimalgoritmo
                     </code></pre>
 
-                    <img class="img-50 img-center" src="img/confused-nick-young.png" alt="Meme representando admiração por código avançado">
+                    <img class="img-50 img-center" src="img/confused-nick-young.webp" alt="Meme representando admiração por código avançado">
 
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Não mexe que tá funcionando perfeitamente!</p>
@@ -714,7 +714,7 @@ fimprocedimento
                         <li>Menos métodos = mais performance!</li>
                         <li>SOLID? Eu prefiro POWER!</li>
                     </ul>
-                    <img src="img/hadouken-code.png" alt="Meme programador lançando hadouken de código poderoso" class="img-center img-50">
+                    <img src="img/hadouken-code.webp" alt="Meme programador lançando hadouken de código poderoso" class="img-center img-50">
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Esse método é pura eficiência concentrada!</p>
                         <cite>POGramador orgulhoso do seu método de 3000 linhas</cite>
@@ -732,7 +732,7 @@ fimprocedimento
                                 <li>100% de sucesso garantido!</li>
                                 <li>A evolução máxima da POG!</li>
                             </ul>
-                            <img src="img/megamanx.png" alt="Mega Man X representando a evolução final da POG" class="img-center img-70">
+                            <img src="img/megamanx.webp" alt="Mega Man X representando a evolução final da POG" class="img-center img-70">
                         </div>
                         <div class="col-md-6">
                             <pre role="region" aria-label="Exemplo de código aceitando qualquer tipo"><code data-trim>
@@ -835,7 +835,7 @@ processarTudo(nulo)
 
                 <section aria-label="Slide final de despedida">
                     <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
-                    <img src="img/pogramador.png" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center">
+                    <img src="img/pogramador.webp" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center">
                 </section>
 
                 <section aria-label="Créditos do projeto">
