--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <h2>Histórico da POG</h2>
                     <div class="row tight-spacing">
                         <div class="col-md-6">
-                            <img src="img/Gregory_XIII.webp" class="img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
+                            <img src="img/Gregory_XIII.webp" class="img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra" loading="lazy">
                         </div>
                         <div class="col-md-6 color4-darker">
                             <p class="lead">A primeira POG registrada na história</p>
@@ -281,7 +281,7 @@
                 <section aria-label="Introdução às técnicas de POG">
                     <h1>Técnicas de POG</h1>
                     <h2 class="color4-darker">Habilidades Avançadas de Sobrevivência!</h2>
-                    <img class="img-center" src="img/sneak100.webp" alt="Meme Sneak 100 - representando as técnicas furtivas de programação orientada à gambiarra">
+                    <img class="img-center" src="img/sneak100.webp" alt="Meme Sneak 100 - representando as técnicas furtivas de programação orientada à gambiarra" loading="lazy">
                 </section>
 
                 <section aria-label="Técnica Zipomatic Versioning - controle de versão por arquivos ZIP">
@@ -399,7 +399,7 @@
                 <section aria-label="Introdução aos Gambi Design Patterns">
                     <h1>Gambi Design Patterns</h1>
                     <h2 class="color4-darker">Padrões Testados e Comprovados em Produção!</h2>
-                    <img src="img/this-is-fine.webp" alt="Meme 'This is fine' - cachorro na sala pegando fogo representando os padrões de design gambiarra" class="img-center">
+                    <img src="img/this-is-fine.webp" alt="Meme 'This is fine' - cachorro na sala pegando fogo representando os padrões de design gambiarra" class="img-center" loading="lazy">
                 </section>
 
                 <section aria-label="Padrão Magic Code - código incompreensível mas eficiente">
@@ -423,7 +423,7 @@ inicio
 fimalgoritmo
                     </code></pre>
 
-                    <img class="img-50 img-center" src="img/confused-nick-young.webp" alt="Meme representando admiração por código avançado">
+                    <img class="img-50 img-center" src="img/confused-nick-young.webp" alt="Meme representando admiração por código avançado" loading="lazy">
 
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Não mexe que tá funcionando perfeitamente!</p>
@@ -506,7 +506,7 @@ fimfuncao
                         <li>Ferramentas modernas são muito sensíveis!</li>
                         <li>@SuppressWarnings("all") = código limpo e sem distrações!</li>
                     </ul>
-                    <img src="img/homer-bush.gif" alt="Meme Homer Simpson - representando foco estratégico no código" class="img-50 img-center">
+                    <img src="img/homer-bush.gif" alt="Meme Homer Simpson - representando foco estratégico no código" class="img-50 img-center" loading="lazy">
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Se compila, tá pronto pra produção!</p>
                         <cite>POGramador Java produtivo às 18h00</cite>
@@ -698,7 +698,7 @@ fimprocedimento
                         <li>10 pastas "utils", 5 pastas "helpers" = organização perfeita!</li>
                         <li>Caça ao tesouro de código = exercício mental diário!</li>
                     </ul>
-                    <img src="img/confused-travolta.gif" alt="Meme John Travolta explorando a arquitetura orgânica do projeto" class="img-center img-50">
+                    <img src="img/confused-travolta.gif" alt="Meme John Travolta explorando a arquitetura orgânica do projeto" class="img-center img-50" loading="lazy">
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Adoro essa liberdade arquitetural!</p>
                         <cite>POGramador apreciando a estrutura orgânica do projeto</cite>
@@ -714,7 +714,7 @@ fimprocedimento
                         <li>Menos métodos = mais performance!</li>
                         <li>SOLID? Eu prefiro POWER!</li>
                     </ul>
-                    <img src="img/hadouken-code.webp" alt="Meme programador lançando hadouken de código poderoso" class="img-center img-50">
+                    <img src="img/hadouken-code.webp" alt="Meme programador lançando hadouken de código poderoso" class="img-center img-50" loading="lazy">
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Esse método é pura eficiência concentrada!</p>
                         <cite>POGramador orgulhoso do seu método de 3000 linhas</cite>
@@ -732,7 +732,7 @@ fimprocedimento
                                 <li>100% de sucesso garantido!</li>
                                 <li>A evolução máxima da POG!</li>
                             </ul>
-                            <img src="img/megamanx.webp" alt="Mega Man X representando a evolução final da POG" class="img-center img-70">
+                            <img src="img/megamanx.webp" alt="Mega Man X representando a evolução final da POG" class="img-center img-70" loading="lazy">
                         </div>
                         <div class="col-md-6">
                             <pre role="region" aria-label="Exemplo de código aceitando qualquer tipo"><code data-trim>
@@ -835,7 +835,7 @@ processarTudo(nulo)
 
                 <section aria-label="Slide final de despedida">
                     <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
-                    <img src="img/pogramador.webp" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center">
+                    <img src="img/pogramador.webp" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center" loading="lazy">
                 </section>
 
                 <section aria-label="Créditos do projeto">
